// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<span>
  <button
    className="css-1qwzad5"
    onClick={[Function]}
  >
    <span
      aria-label="so cool"
      role="img"
    >
      😀 😎 👍 💯
    </span>
  </button>
</span>
`;

exports[`Storyshots Button with text 1`] = `
<span>
  <button
    className="css-1qwzad5"
    onClick={[Function]}
  >
    Hello Button
  </button>
</span>
`;
